Removed some FindBugs warnings.
Only the low hanging fruit. Nothing was a real bug, more along the lines of:
- too many objects created
- inconsistent naming
- inner classes not static
- Exception caught for convenience of writer (bad for debugging since e.g. NPE can just disappear)

FundBugs still has plenty to complain about, but that'll do for today.

git-svn-id: svn://localhost/tmp/s2g/colossus.svn/trunk@3165 c5679a2a-0e0e-0410-bba2-8642b794b8c1